@@ -26,7 +26,7 @@
 		<slf4j-version>1.7.32</slf4j-version>
 		<android-version>4.1.1.4</android-version>
 		<logback.version>1.2.10</logback.version>
-		<aws-lambda-java-core-version>1.2.1</aws-lambda-java-core-version>
+		<aws-lambda-java-core-version>1.2.0</aws-lambda-java-core-version>
 		<maven-plugin-api-version>3.6.3</maven-plugin-api-version>
 		<!-- log4j version 1 is here for backwards compatibility -->
 		<log4j-version>1.2.17</log4j-version>
